--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ language: go
 go:
   - 1.3
   - tip
-
-install:
-  - go get github.com/apcera/nats
-  - go get github.com/aws/aws-sdk-go/aws
-  - go get github.com/aws/aws-sdk-go/service/sqs
-  - go get github.com/pborman/uuid
-  - go get gopkg.in/yaml.v2
+#
+#install:
+#  - go get github.com/apcera/nats
+#  - go get github.com/aws/aws-sdk-go/aws
+#  - go get github.com/aws/aws-sdk-go/service/sqs
+#  - go get github.com/pborman/uuid
+#  - go get gopkg.in/yaml.v2
